--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+
+package.json
+
+/node_modules
+/public/storage
+
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
